--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.8.4",
     "mockjs": "^1.0.1-beta3",
     "swiper": "^4.1.6",
     "vue": "^2.5.2",
